terraform/dashboard/modules/networking/networking.tf
resource "aws_internet_gateway" "main" {
  
    vpc_id = aws_vpc.main.id

    tags = {
        Name = "monitoring-igw"
    }

}

resource "aws_subnet" "public_a" {

    vpc_id = aws_vpc.main.id

    cidr_block = "10.0.1.0/24"

    availability_zone = "${var.aws_region}a"

    map_public_ip_on_launch = true

    tags = {
      Name = "public-subnet-a"
    }
}


resource "aws_subnet" "public_b" {

    vpc_id = aws_vpc.main.id

    cidr_block = "10.0.2.0/24"

    availability_zone = "${var.aws_region}b"

    map_public_ip_on_launch = true

    tags = {
      Name = "public-subnet-b"
    }
}


resource "aws_route_table" "public" {

  vpc_id = aws_vpc.main.id

  route {

    cidr_block = "0.0.0.0/0"

    gateway_id = aws_internet_gateway.main.id

  }

  tags = {
    Name = "public-route-table"
  }

}

resource "aws_route_table_association" "public_a" {
    subnet_id = aws_subnet.public_a.id

    route_table_id = aws_route_table.public.id

}

resource "aws_route_table_association" "public_b" {
    subnet_id = aws_subnet.public_b.id

    route_table_id = aws_route_table.public.id

}
